# nextjs-mssql-gemini

./: README.md  pyproject.toml
backend/app/: .env.example
backend/app/ai_providers/: base.py  gemini_provider.py
backend/app/api/: dependencies.py  main.py
backend/app/api/query/: route.ts
backend/app/api/routes/: graph.py  procedures.py  reports.py
backend/app/cache/: cache_manager.py
backend/app/database/: connection.py
backend/app/services/: graph_service.py  procedure_service.py  query_processor.py  report_service.py
frontend/: README.md  eslint.config.cjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/analytics/: page.tsx
frontend/src/app/(dashboard)/graph/: page.tsx
frontend/src/app/(dashboard)/procedures/: page.tsx
frontend/src/app/(dashboard)/reports/: page.tsx
frontend/src/app/api/procedures/: route.ts
frontend/src/app/api/query/: route.ts
frontend/src/app/api/refine/: route.ts
frontend/src/app/api/reports/filters/: route.ts
frontend/src/app/api/reports/forecast/: route.ts
frontend/src/app/api/reports/pptx/: route.ts
frontend/src/components/analytics/: query-input.tsx  visualization-panel.tsx
frontend/src/components/graph/: SalesOrganizationGraph.tsx
frontend/src/components/procedures/: procedure-explorer.tsx
frontend/src/components/reports/: report-builder.tsx
frontend/src/components/ui/: header.tsx  sidebar.tsx
frontend/src/lib/hooks/: use-query-processor.ts  use-websocket.ts
(+2 files in other folders)
