[project]
name = "nextjs-mssql-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.115.8",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]
