[project]
name = "nextjs-mssql-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.115.8",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.3",
    "numpy>=2.1.3",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.0.1",
    "python-pptx>=0.6.23",
    "sqlalchemy>=2.0.38",
    "statsmodels>=0.14.4",
    "uvicorn>=0.34.0",
    "vl-convert-python>=1.8.0",
    "websockets>=14.2",
]
